# z33-emulator

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  directives-18b9250c.js  directives-18b9250c.js.map  directives-26b98059.js  directives-26b98059.js.map  directives-3d725034.js  directives-3d725034.js.map  directives-4bfcbb1a.js  directives-4bfcbb1a.js.map  directives-4c9f26cb.js  directives-4c9f26cb.js.map  directives-60fbd1db.js  directives-60fbd1db.js.map  directives-e5b3b408.js  directives-e5b3b408.js.map  directives-f20d7102.js  directives-f20d7102.js.map  fact-02a22ca9.js  fact-02a22ca9.js.map  fact-097ab815.js  fact-097ab815.js.map  fact-8c8c940b.js  fact-8c8c940b.js.map  fact-8e18746f.js  fact-8e18746f.js.map  fact-90390116.js  fact-90390116.js.map  fact-ba3c8490.js  fact-ba3c8490.js.map  fact-ee034152.js  fact-ee034152.js.map  fact-eea60949.js  fact-eea60949.js.map  handler-0b1a179b.js  (+35 more)
.github/: dependabot.yml  zizmor.yml
assets/: z33-web-136da07d.wasm  z33-web-2c64063c.wasm  z33-web-2deb3747.wasm  z33-web-39155c88.wasm  z33-web-401d3325.wasm  z33-web-4f1a621a.wasm  z33-web-69c35e76.wasm  z33-web-6e42062b.wasm  z33-web-aa27d280.wasm  z33-web-b327acfe.wasm  z33-web-c0c7ca88.wasm  z33-web-c82bb450.wasm  z33-web-d3f3485c.wasm  (+1 more)
cli/: Cargo.toml
cli/src/: main.rs  util.rs
cli/src/commands/: completion.rs  dap.rs  dump.rs  lsp.rs  mod.rs  preprocess.rs  print.rs  run.rs
cli/src/interactive/: helper.rs  mod.rs  parse.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: dap_server.rs  lib.rs  lsp_server.rs
emulator/: Cargo.toml
emulator/src/: ast.rs  compiler.rs  constants.rs  diagnostic.rs  interactive.rs  lib.rs  main.rs  memory.rs  parser.rs  preprocessor.rs  processor.rs  util.rs
emulator/src/compiler/: layout.rs  memory.rs  mod.rs  new.rs
emulator/src/dap/: index.rs  mod.rs  protocol.rs  tests.rs
emulator/src/interactive/: helper.rs  mod.rs
emulator/src/lsp/: backend.rs  completion.rs  diagnostics.rs  document.rs  hover.rs  mod.rs  position.rs  references.rs  semantic_tokens.rs  signature.rs  symbols.rs  text.rs  workspace.rs
emulator/src/parser/: assembly.rs  condition.rs  directive.rs  errors.rs  expression.rs  line.rs  literal.rs  location.rs  mod.rs  precedence.rs  preprocessor.rs  shared.rs  value.rs
emulator/src/preprocessor/: annotations.rs  fs.rs  mod.rs  new.rs
emulator/src/preprocessor/snapshots/: z33_emulator__preprocessor__tests__condition_parse_error_test.snap  z33_emulator__preprocessor__tests__condition_test.snap  z33_emulator__preprocessor__tests__definition_test-2.snap  z33_emulator__preprocessor__tests__definition_test.snap  z33_emulator__preprocessor__tests__if_defined_after_undef_test.snap  z33_emulator__preprocessor__tests__if_defined_test.snap  z33_emulator__preprocessor__tests__if_defined_with_value_test.snap  z33_emulator__preprocessor__tests__inclusion_test.snap  z33_emulator__preprocessor__tests__parse_error_in_include_test.snap  z33_emulator__preprocessor__tests__unknown_include_error_test.snap  z33_emulator__preprocessor__tests__user_error_in_include_test.snap
emulator/src/processor/: exception.rs  instructions.rs  memory.rs  mod.rs  registers.rs
emulator/src/runtime/: arguments.rs  exception.rs  instructions.rs  memory.rs  mod.rs  registers.rs
emulator/tests/: architecture.rs  arithmetic.rs  assembly.rs  bitwise.rs  branches.rs  diagnostics.rs  exceptions.rs  execution.rs
emulator/tests/helpers/: mod.rs
emulator/tests/snapshots/: diagnostics__compilation_duplicate_label.snap  diagnostics__compilation_invalid_register.snap  diagnostics__compilation_invalid_register.snap.new  diagnostics__compilation_memory_overlap.snap  diagnostics__compilation_push_direct_memory.snap  diagnostics__compilation_too_many_arguments.snap  diagnostics__compilation_unknown_entrypoint.snap  diagnostics__compilation_wrong_argument_type.snap  diagnostics__empty_directive_argument.snap  diagnostics__invalid_number_literal.snap  diagnostics__missing_register_name.snap  diagnostics__multiple_errors_recovery.snap  diagnostics__preprocessor_bad_condition.snap  diagnostics__preprocessor_error_directive.snap  diagnostics__preprocessor_missing_endif.snap  diagnostics__preprocessor_missing_include.snap  diagnostics__unclosed_bracket.snap  diagnostics__unknown_instruction.snap  diagnostics__unknown_instruction_with_args.snap
instruction-derive/: Cargo.toml
instruction-derive/src/: lib.rs
web/: .gitignore  .oxlintrc.json  Cargo.toml  biome.json  components.json  global.d.ts  index.html  index.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  rollup.config.mjs  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
web/app/: App.tsx  computer-types.ts  computer.tsx  debug-layout.tsx  debug-sidebar.tsx  debug-toolbar.tsx  docs-button.tsx  edit-toolbar.tsx  entrypoint-selector.tsx  file-sidebar.tsx  file-store.ts  format-switcher.tsx  globals.css  index.ts  index.tsx  memory-panel.tsx  monaco.ts  multi-file-editor.tsx  panel-resize-handle.tsx  report.ts  step-form.tsx  style.css  theme-switcher.tsx  use-source-highlight.ts  workers.ts
web/app/components/: theme-provider.tsx
web/app/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  form.tsx  input.tsx  label.tsx  popover.tsx  progress.tsx  scroll-area.tsx  select.tsx  table.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
web/app/hooks/: use-compilation.ts  use-computer.ts  use-file-drop.ts  use-source-highlight.ts  use-step-runner.ts
web/app/lib/: computer-proxy.ts  emulator-protocol.ts  file-paths.ts  lsp-client.ts  lsp-monaco.ts  monaco-sync.ts  utf8.ts  wasm.ts
web/app/stores/: app-store.ts  breakpoint-store.ts  display-store.ts  file-store.ts  persist-keys.ts  theme-store.ts
web/app/workers/: emulator.worker.ts  lsp.worker.ts  worker-protocol.ts
web/e2e/: breakpoints.spec.ts  core-flows.spec.ts  debug-details.spec.ts  file-management.spec.ts  fixtures.ts  lsp.spec.ts  theme.spec.ts
web/src/: dap_server.rs  lib.rs  lsp_server.rs  source_index.rs
(+275 files in other folders)
