[workspace]
resolver = "2"

members = ["emulator", "cli", "web"]

[workspace.package]
description = "An emulator for the Zorglub-33 architecture"
homepage = "https://pdagog.gitlab.io/ens/z33refcard.pdf"
repository = "https://github.com/sandhose/z33-emulator"
version = "0.6.0"
authors = ["Quentin Gliech <gliech@unistra.fr>"]
edition = "2021"
readme = "README.md"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

missing_errors_doc = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
anstyle = "1.0.13"
anyhow = "1.0.100"
bitflags = "2.10.0"
camino = { version = "1.2.2", features = ["serde1"] }
clap = { version = "4.5.55", features = ["derive"] }
clap_complete = "4.5.65"
console_error_panic_hook = "0.1.7"
indoc = "2.0.7"
insta = "1.46.1"
js-sys = "0.3.85"
miette = "7.6.0"
nom = "7.1.3"
parse-display = "0.10.0"
pretty_assertions = "1.4.1"
rustyline = "14.0.0"
rustyline-derive = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
shell-words = "1.1.1"
thiserror = "1.0.69"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-wasm = "0.2.1"
tsify = { version = "0.5.6", features = ["js"], default-features = false }
unicode-segmentation = "1.12.0"
wasm-bindgen = "0.2.108"
z33-emulator = { path = "emulator" }

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
strip = true
codegen-units = 1
