[workspace]
resolver = "2"

members = ["emulator", "cli", "web", "zed"]

[workspace.package]
description = "An emulator for the Zorglub-33 architecture"
homepage = "https://pdagog.gitlab.io/ens/z33refcard.pdf"
repository = "https://github.com/sandhose/z33-emulator"
version = "0.8.2"
authors = ["Quentin Gliech <gliech@unistra.fr>"]
edition = "2021"
readme = "README.md"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

missing_errors_doc = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
anstyle = "1.0.14"
anyhow = "1.0.102"
bitflags = "2.11.0"
camino = { version = "1.2.2", features = ["serde1"] }
chumsky = { version = "0.13.0", default-features = false, features = ["std"] }
clap = { version = "4.6.0", features = ["derive"] }
codespan-reporting = "0.13.1"
clap_complete = "4.6.0"
console_error_panic_hook = "0.1.7"
futures = "0.3"
indoc = "2.0.7"
insta = "1.47.1"
js-sys = "0.3.92"
parse-display = "0.11.0"
percent-encoding = "2.3.2"
pretty_assertions = "1.4.1"
rustyline = "18.0.0"
rustyline-derive = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
smallvec = "1"
serde-wasm-bindgen = "0.6.5"
shell-words = "1.1.1"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-wasm = "0.2.1"
tsify = { version = "0.5.6", features = ["js"], default-features = false }
unicode-segmentation = "1.13.2"
wasm-bindgen = "0.2.111"
wasm-bindgen-futures = "0.4"
tokio = { version = "1", features = ["io-std", "rt"] }
tower = "0.4"
tower-lsp = "0.20"
z33-emulator = { path = "emulator" }

[profile.release]
lto = "thin"
panic = "abort"
debug = "limited"
