[package]
name = "z33-cli"
description.workspace = true
homepage.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
z33-emulator = { path = "../emulator" }

anstyle = "1.0.7"
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
codespan-reporting = { git = "https://github.com/brendanzab/codespan.git" }
nom = "7.1.3"
rustyline = "14.0.0"
rustyline-derive = "0.10.0"
shell-words = "1.1.0"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
