[package]
name = "z33-cli"
description.workspace = true
homepage.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anstyle.workspace = true
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
clap_complete.workspace = true
miette.workspace = true
nom.workspace = true
rustyline.workspace = true
rustyline-derive.workspace = true
shell-words.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
z33-emulator.workspace = true
