[package]
name = "z33-emulator"
description = "An emulator for the Zorglub-33 architecture"
homepage = "https://pdagog.gitlab.io/ens/z33refcard.pdf"
version = "0.5.4"
authors = ["Quentin Gliech <gliech@unistra.fr>"]
edition = "2021"
readme = "../README.md"
license = "MIT"

[dependencies]
bitflags = "2.5.0"
thiserror = "1.0.61"
nom = "7.1.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
unicode-segmentation = "1.11.0"
parse-display = "0.9.0"

[dev-dependencies]
indoc = "2.0.5"
pretty_assertions = "1.4.0"
