[package]
name = "z33-emulator"
description.workspace = true
homepage.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
bitflags = "2.5.0"
thiserror = "1.0.62"
nom = "7.1.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
unicode-segmentation = "1.11.0"
parse-display = "0.9.1"

[dev-dependencies]
indoc = "2.0.5"
pretty_assertions = "1.4.0"
