[package]
name = "z33-emulator"
description.workspace = true
homepage.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
bitflags.workspace = true
camino.workspace = true
thiserror.workspace = true
miette.workspace = true
nom.workspace = true
nom-language.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-segmentation.workspace = true
parse-display.workspace = true

[dev-dependencies]
indoc.workspace = true
insta.workspace = true
pretty_assertions.workspace = true
