[package]
name = "z33-instruction-derive"
description = "Utility derive macro for the z33-emulator"
version = "0.1.0"
authors = ["Quentin Gliech <gliech@unistra.fr>"]
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.42"
quote = "1.0.7"
proc-macro2 = "1.0.23"
proc-macro-error = "1.0.4"
