[package]
name = "z33-web"
version = "0.5.4"
edition = "2021"
license = "MIT"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
z33-emulator = { path = "../emulator" }
wasm-bindgen = "0.2.92"
serde = { version = "1.0.202", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
tsify = { version = "0.4.5", default-features = false, features = ["js"] }
console_error_panic_hook = "0.1.7"
tracing = "0.1.40"
tracing-wasm = "0.2.1"
js-sys = "0.3.69"
