[package]
name = "z33-web"
description.workspace = true
homepage.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
camino.workspace = true
console_error_panic_hook.workspace = true
js-sys.workspace = true
miette.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
tsify.workspace = true
tracing.workspace = true
tracing-wasm.workspace = true
wasm-bindgen.workspace = true
z33-emulator.workspace = true
