[package]
name = "z33-wasm"
description.workspace = true
homepage.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
camino.workspace = true
console_error_panic_hook.workspace = true
js-sys.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
serde_json.workspace = true
tsify.workspace = true
tracing.workspace = true
tracing-wasm.workspace = true
wasm-bindgen.workspace = true
z33-emulator.workspace = true

# WASM LSP/DAP bridge deps (wasm-only in practice, but their versions live in
# the workspace table like every other dependency).
futures.workspace = true
tower.workspace = true
tower-lsp.workspace = true
wasm-bindgen-futures.workspace = true
